--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@ body {
     <a href="https://portal.socio.gs/V6/gs/mis-herramientas/outlook/" target="_blank" class="boton">Portal Salinas</a>
     <a href="https://copilot.microsoft.com/chats/MqfBEs3AuZzdvJ22QJAjk" target="_blank" class="boton">Copilot</a>
 	    <a href="https://plantillas-net.github.io/Url/" target="_blank" class="boton"> Url imagenes</a>
-    <a href="https://plantillas-net.github.io/soporte/" target="_blank" class="boton">Mensajeria</a>
+    <a href="https://plantillas-net.github.io/Mensajeria" target="_blank" class="boton">Mensajeria</a>
 	    <a href="https://plantillas-net.github.io/trabajo/" target="_blank" class="boton">Plantilla</a>
 </div>
 
